--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-viewerjs": "^0.1.9",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
